Security hardening and version bump to 1.0.9
- FLAG_SECURE on ConversationActivity and vault password dialogs
- Full 12-byte random nonce for group message GCM encryption
- Improved video/audio stream nonce construction
- WipePasswordManager auto-migrates legacy SHA-256 to PBKDF2-200k
- VaultViewModel PBKDF2 iterations increased to 200k
- SQLCipher cipher_memory_security re-enabled with fsync after VACUUM
- Key zeroing on all error paths (StreamingAudioDecryptor, VaultViewModel)
- ML-KEM shared secret cleared after use in PqRatchetImpl
- Epoch rotation now revokes old sender keys immediately
- Reject group messages beyond MAX_SKIP window
- Timestamp validation with absolute bounds for group messages
- Vault content padding to prevent file size analysis
- Vault auto-lock no longer reset by background read operations
- AntiForensics uses safe exec string array
- SenderKey distribution validates epoch monotonicity